--- a/localization/english/br_names_l_english.yml
+++ b/localization/english/br_names_l_english.yml
@@ -519,89 +519,89 @@
 
 #Georgian
  # first names
- Akaki: "Akaki" 
+ #Akaki: "Akaki" 
  Aleksandre: "Aleksandre" 
- Andria: "Andria" 
- Bagrat: "Bagrat" 
- Besarion: "Besarion" 
+ #Andria: "Andria" 
+ #Bagrat: "Bagrat" 
+ #Besarion: "Besarion" 
  Davit: "Davit" 
- Dimitri: "Dimitri"
+ #Dimitri: "Dimitri"
  Demetre: "Demetre"
- Eduard: "Eduard" 
- Ekvtime: "Ekvtime" 
- Evgeni: "Evgeni"
+ #Eduard: "Eduard" 
+ #Ekvtime: "Ekvtime" 
+ #Evgeni: "Evgeni"
  Erekle: "Erekle"
- Filipe: "Filipe" 
- Galaktion: "Galaktion" 
- Giorgi: "Giorgi" 
- Germanos: "Germanos" 
- Givi: "Givi" 
- Grigol: "Grigol" 
- Ilia: "Ilia" 
- Ioseb: "Ioseb" 
- Irakli: "Irakli" 
- Ivane: "Ivane" 
- Jansung: "Jansung" 
- Jemal: "Jemal" 
- Kaikhosro: "Kaikhosro" 
- Konstantine: "Konstantine" 
- Leo: "Leo" 
- Levan: "Levan"
+ #Filipe: "Filipe" 
+ #Galaktion: "Galaktion" 
+ #Giorgi: "Giorgi" 
+ #Germanos: "Germanos" 
+ #Givi: "Givi" 
+ #Grigol: "Grigol" 
+ #Ilia: "Ilia" 
+ #Ioseb: "Ioseb" 
+ #Irakli: "Irakli" 
+ #Ivane: "Ivane" 
+ #Jansung: "Jansung" 
+ #Jemal: "Jemal" 
+ #Kaikhosro: "Kaikhosro" 
+ #Konstantine: "Konstantine" 
+ #Leo: "Leo" 
+ #Levan: "Levan"
  Luarsab: "Luarsab" 
- Luka: "Luka" 
- Meliton: "Meliton" 
- Mikheil: "Mikheil" 
- Murman: "Murman" 
- Nikoloz: "Nikoloz" 
- Noe: "Noe" 
- Otar: "Otar" 
+ #Luka: "Luka" 
+ #Meliton: "Meliton" 
+ #Mikheil: "Mikheil" 
+ #Murman: "Murman" 
+ #Nikoloz: "Nikoloz" 
+ #Noe: "Noe" 
+ #Otar: "Otar" 
  Polikarpe: "Polikarpe" 
- Radish: "Radish" 
- Revaz: "Revaz" 
- Sargis: "Sargis" 
- Sergo: "Sergo" 
- Shalva: "Shalva" 
- Solomon: "Solomon" 
- Sulkhan: "Sulkhan" 
- Teimuraz: "Teimuraz" 
+ #Radish: "Radish" 
+ #Revaz: "Revaz" 
+ #Sargis: "Sargis" 
+ #Sergo: "Sergo" 
+ #Shalva: "Shalva" 
+ #Solomon: "Solomon" 
+ #Sulkhan: "Sulkhan" 
+ #Teimuraz: "Teimuraz" 
  Tengiz: "Tengiz" 
- Vakhtang: "Vakhtang" 
- Valerian: "Valerian" 
- Vasil: "Vasil" 
- Vladimer: "Vladimer" 
- Zakaria: "Zakaria" 
- Zurab: "Zurab" 
- Zviad: "Zviad"
- Ana: "Ana"
- Anastasia: "Anastasia"
- Aneta: "Aneta"
- Babilina: "Babilina"
- Darejan: "Darejan"
- Dominika: "Dominika"
- Ekaterine: "Ekaterine"
- Eleonora: "Eleonora"
- Esma: "Esma"
- Ketevan: "Ketevan"
- Mariam: "Mariam"
- Nino: "Nino"
- Olga: "Olga"
- Rusudan: "Rusudan"
- Tekle: "Tekle"
- Vera: "Vera"
+ #Vakhtang: "Vakhtang" 
+ #Valerian: "Valerian" 
+ #Vasil: "Vasil" 
+ #Vladimer: "Vladimer" 
+ #Zakaria: "Zakaria" 
+ #Zurab: "Zurab" 
+ #Zviad: "Zviad"
+ #Ana: "Ana"
+ #Anastasia: "Anastasia"
+ #Aneta: "Aneta"
+ #Babilina: "Babilina"
+ #Darejan: "Darejan"
+ #Dominika: "Dominika"
+ #Ekaterine: "Ekaterine"
+ #Eleonora: "Eleonora"
+ #Esma: "Esma"
+ #Ketevan: "Ketevan"
+ #Mariam: "Mariam"
+ #Nino: "Nino"
+ #Olga: "Olga"
+ #Rusudan: "Rusudan"
+ #Tekle: "Tekle"
+ #Vera: "Vera"
 
  # last names
- Abashidze: "Abashidze"
+ #Abashidze: "Abashidze"
  Agiashvili: "Agiashvili"
  Akhvlediani: "Akhvlediani"
- Amilakhvari: "Amilakhvari"
+ #Amilakhvari: "Amilakhvari"
  Amirejibi: "Amirejibi"
  Anchabadze: "Anchabadze"
  Apakidze: "Apakidze"
  Arghutashvili: "Arghutashvili"
  Asatiani: "Asatiani"
- Avalishvili: "Avalishvili"
+ #Avalishvili: "Avalishvili"
  Babadishvili: "Babadishvili"
- Bagrationi: "Bagrationi"
+ #Bagrationi: "Bagrationi"
  Bagration-Mukhraneli: "Bagration-Mukhraneli"
  Baratashvili: "Baratashvili"
  Begtabegishvili: "Begtabegishvili"
@@ -612,8 +612,8 @@
  Chizhavadze: "Chizhavadze"
  Chkheidze: "Chkheidze"
  Choloqashvili: "Choloqashvili"
- Dadeshkeliani: "Dadeshkeliani"
- Dadiani: "Dadiani"
+ #Dadeshkeliani: "Dadeshkeliani"
+ #Dadiani: "Dadiani"
  Dgebuadze: "Dgebuadze"
  Diasamidze: "Diasamidze"
  Endronikashvili: "Endronikashvili"
@@ -621,7 +621,7 @@
  Gardapkhadze: "Gardapkhadze"
  Gelovani: "Gelovani"
  Gugunava: "Gugunava"
- Guramishvili: "Guramishvili"
+ #Guramishvili: "Guramishvili"
  Gurgenidze: "Gurgenidze"
  Gurieli: "Gurieli"
  Iashvili: "Iashvili"
@@ -641,7 +641,7 @@
  Maksimenishvili: "Maksimenishvili"
  Maqashvili: "Maqashvili"
  Matchutadze: "Matchutadze"
- Melikishvili: "Melikishvili"
+ #Melikishvili: "Melikishvili"
  Mikadze: "Mikadze"
  Mikeladze: "Mikeladze"
  Mkheidze: "Mkheidze"
@@ -660,10 +660,10 @@
  Sumbatashvili: "Sumbatashvili"
  Tarkhan-Mouravi: "Tarkhan-Mouravi"
  Tavdgiridze: "Tavdgiridze"
- Tsereteli: "Tsereteli"
- Tsitsishvili: "Tsitsishvili"
+ #Tsereteli: "Tsereteli"
+ #Tsitsishvili: "Tsitsishvili"
  Tsulukidze: "Tsulukidze"
- Tumanishvili: "Tumanishvili"
+ #Tumanishvili: "Tumanishvili"
  Tusishvili: "Tusishvili"
  Vachnadze: "Vachnadze"
  Vakhvakhishvili: "Vakhvakhishvili"
@@ -695,7 +695,7 @@
  Badriashvili: "Badriashvili"
  Bagratishvili: "Bagratishvili"
  Bakhutashvili: "Bakhutashvili"
- Bakradze: "Bakradze"
+ #Bakradze: "Bakradze"
  Bantsuri: "Bantsuri"
  Basilashvili: "Basilashvili"
  Batiashvili: "Batiashvili"
@@ -717,7 +717,7 @@
  Chkhartishvili: "Chkhartishvili"
  Chkhikvishvili: "Chkhikvishvili"
  Chrdileli: "Chrdileli"
- Chubinashvili: "Chubinashvili"
+ #Chubinashvili: "Chubinashvili"
  Dalakishvili: "Dalakishvili"
  Darakhvelidze: "Darakhvelidze"
  Dashniani: "Dashniani"
@@ -738,7 +738,7 @@
  Eliashvili: "Eliashvili"
  Eliozishvili: "Eliozishvili"
  Ergemlidze: "Ergemlidze"
- Gabashvili: "Gabashvili"
+ #Gabashvili: "Gabashvili"
  Gabunia: "Gabunia"
  Gagua: "Gagua"
  Gamqrelidze: "Gamqrelidze"
@@ -796,12 +796,12 @@
  Kajaia: "Kajaia"
  Kakhidze: "Kakhidze"
  Kalatozishvili: "Kalatozishvili"
- Kandelaki: "Kandelaki"
+ #Kandelaki: "Kandelaki"
  Kargareteli: "Kargareteli"
  Karsidze: "Karsidze"
- Kartvelishvili: "Kartvelishvili"
+ #Kartvelishvili: "Kartvelishvili"
  Karumidze: "Karumidze"
- Kavtaradze: "Kavtaradze"
+ #Kavtaradze: "Kavtaradze"
  Keidia: "Keidia"
  Kelbakiani: "Kelbakiani"
  Ketskhoveli: "Ketskhoveli"
@@ -853,9 +853,9 @@
  Lominadze: "Lominadze"
  Maghalashvili: "Maghalashvili"
  Maghradze: "Maghradze"
- Makharadze: "Makharadze"
+ #Makharadze: "Makharadze"
  Makhateli: "Makhateli"
- Makhviladze: "Makhviladze"
+ #Makhviladze: "Makhviladze"
  Mamardashvili: "Mamardashvili"
  Mamatsashvili: "Mamatsashvili"
  Mamuchashvili: "Mamuchashvili"
@@ -874,7 +874,7 @@
  Meunargia: "Meunargia"
  Mgaloblishvili: "Mgaloblishvili"
  Mgeladze: "Mgeladze"
- Mikelashvili: "Mikelashvili"
+ #Mikelashvili: "Mikelashvili"
  Mirzashvili: "Mirzashvili"
  Momtsemlidze: "Momtsemlidze"
  Mortuladze: "Mortuladze"
@@ -912,7 +912,7 @@
  Qiasashvili: "Qiasashvili"
  Qorghanashvili: "Qorghanashvili"
  Qurashvili: "Qurashvili"
- Ramishvili: "Ramishvili"
+ #Ramishvili: "Ramishvili"
  Ratiani: "Ratiani"
  Rcheulishvili: "Rcheulishvili"
  Revia: "Revia"
@@ -960,14 +960,14 @@
  Ugrekhelidze: "Ugrekhelidze"
  Ujmajuridze: "Ujmajuridze"
  Utnelishvili: "Utnelishvili"
- Uznadze: "Uznadze"
+ #Uznadze: "Uznadze"
  Zaalishvili: "Zaalishvili"
  Zaldastanishvili: "Zaldastanishvili"
  Zandukeli: "Zandukeli"
  Zavarashvili: "Zavarashvili"
  Zedginidze: "Zedginidze"
  Zhghenti: "Zhghenti"
- Zhordania: "Zhordania"
+ #Zhordania: "Zhordania"
  Zhuruli: "Zhuruli"
  Zhvania: "Zhvania"
  Zvambaia: "Zvambaia"
