--- a/localization/english/br_names_l_english.yml
+++ b/localization/english/br_names_l_english.yml
@@ -643,7 +643,7 @@
  Matchutadze: "Matchutadze"
  #Melikishvili: "Melikishvili"
  Mikadze: "Mikadze"
- Mikeladze: "Mikeladze"
+ #Mikeladze: "Mikeladze"
  Mkheidze: "Mkheidze"
  Nakashidze: "Nakashidze"
  Nizharadze: "Nizharadze"
@@ -880,7 +880,7 @@
  Mortuladze: "Mortuladze"
  Mosidze: "Mosidze"
  Murvanishvili: "Murvanishvili"
- Muskhelishvili: "Muskhelishvili"
+ #Muskhelishvili: "Muskhelishvili"
  Nagladze: "Nagladze"
  Namoradze: "Namoradze"
  Naneishvili: "Naneishvili"
