--- a/localization/english/br_technology_l_english.yml
+++ b/localization/english/br_technology_l_english.yml
@@ -36,8 +36,8 @@
  br_tech_newcomen_engine_desc: "An early steam engine that was used to pump water out of mines."
  br_tech_track: "Track"
  br_tech_track_desc: "The wagonway is considered the prototype and predecessor of railways, and almost all mines built in the 16th and 17th centuries used wagonway mining cars as the only mode of transportation."
- br_tech_blast_furnances: "Blast Furnances"
- br_tech_blast_furnances_desc: "Blast furnaces are large industrial structures used to smelt iron from its ore by applying intense heat and a continuous blast of air. Charged with iron ore, coke, and limestone, these towering furnaces operate at extremely high temperatures to produce molten pig iron, which can then be refined into steel. Central to early modern and industrial-age metallurgy, blast furnaces revolutionized metal production by enabling mass output on an unprecedented scale."
+ br_tech_blast_furnaces: "Blast Furnaces"
+ br_tech_blast_furnaces_desc: "Blast furnaces are large industrial structures used to smelt iron from its ore by applying intense heat and a continuous blast of air. Charged with iron ore, coke, and limestone, these towering furnaces operate at extremely high temperatures to produce molten pig iron, which can then be refined into steel. Central to early modern and industrial-age metallurgy, blast furnaces revolutionized metal production by enabling mass output on an unprecedented scale."
 
 
  # Society
