added new events
-added 3 new events that are triggered dynamically

--- a/localization/english/br_hre_revolution_l_english.yml
+++ b/localization/english/br_hre_revolution_l_english.yml
@@ -62,6 +62,21 @@
  hre_revolution_events.5.d: "There is currently a lot of Food insecurity amongst our population. This is increasing the unrest amongst the population."
  hre_revolution_events.5.f: "The tanner looked around all around his village, the faces of all the people that passed by him looked emaciated. How long would this travesty continue, if they don’t get more food soon the entire village will starve to death, does the Emperor not care at all about his subjects. The nobles they all get to live in luxury waisting food on their pointless parties, while they are starving in the mud. DO THEY NOT CARE AT ALL."
  hre_revolution_events.5.a: "This isn't good"
+ #Bandits room the countryside
+ hre_revolution_events.6.t: "Bandits room the countryside"
+ hre_revolution_events.6.d: "Bandits are terrorising the villages in the countryside."
+ hre_revolution_events.6.f: "News has reached us that apperantly there are a sizable number of bandit groups that are rooming the countryside and terrorising the local villages, while their local authorities have been unable to stop them. This has majorly increased disatisfaction within the population, if we want to prevent things from getting worse we should look at solving the issue."
+ hre_revolution_events.6.a: "This isn't good"
+ #3de estate forms mititias
+ hre_revolution_events.7.t: "3de estate forms mititias"
+ hre_revolution_events.7.d: "Members of the 3de estate have begun to form local mititias."
+ hre_revolution_events.7.f: "We have recieve word that all over the country members of the 3de estate have begun forming mititias, this could present a great threat to the government if left uncheckt."
+ hre_revolution_events.7.a: "This isn't looking good."
+ #3de estate mititias raid arms depots
+ hre_revolution_events.8.t: "Mititias raid arms depots"
+ hre_revolution_events.8.d: "Militias have raided army arms depots in the capital, it seems the 3de estate has begun arming it self."
+ hre_revolution_events.8.f: "A messanger enters the Emperors room, the news he brings is most disturbing 'The peasants have begun arming themselfs.'. Apperantly early in the morning a large mob of people march on one of the arms depots in the city and seems to have seized it by force and looted all of the weapons there. Information is limited, we don’t even know what has become of the soldiers guarding the depots, are they dead or, did they desert?"
+ hre_revolution_events.8.a: "Can this get any worse."
  #Revolution erupts events
  hre_revolution_events.201.t: "March on the Royal Residence"
  hre_revolution_events.201.d: "A large number of members of the 3de estate have decided to march on the [br_concept_imperial_residence]."
