--- a/localization/english/br_hre_revolution_l_english.yml
+++ b/localization/english/br_hre_revolution_l_english.yml
@@ -16,12 +16,34 @@
  br_impending_revolution_to_many_loyalists_loc: "more than #variable [GetPlayer.MakeScope.ScriptValue('br_impending_revolution_loyalist_threshold_percentage')]%#! of the population are loyalists."
  br_impending_revolution_monarchy_popularity_revolution_progress_change_loc: "from the current Monarchy popularity."
 
+ #br_quantitative_indicator_loc
+ br_small_loc: "small"
+ br_medium_loc: "medium"
+ br_large_loc: "large"
+ br_unspecified_loc: "unspecified"
  ##Change in progress tt
  br_basic_revolution_progress_increases_loc: "Our progress towards revolution has increased with a"
  br_hre_small_increase_in_revolution_progress_tt: "$br_basic_revolution_progress_increases_loc$ small amount: [GetPlayer.MakeScope.ScriptValue('br_small_increase_in_revolutulionary_tension_value')|+=]."
  br_hre_medium_increase_in_revolution_progress_tt: "$br_basic_revolution_progress_increases_loc$ medium amount: [GetPlayer.MakeScope.ScriptValue('br_medium_increase_in_revolutulionary_tension_value')|+=]."
  br_hre_large_increase_in_revolution_progress_tt: "$br_basic_revolution_progress_increases_loc$ large amount: [GetPlayer.MakeScope.ScriptValue('br_large_increase_in_revolutulionary_tension_value')|+=]."
  br_hre_unspecified_increase_in_revolution_progress_tt: "$br_basic_revolution_progress_increases_loc$ unspecified amount."
+ ##Change in estate disatisfaction tt
+ br_disatisfaction_change_value: "[SCOPE.GetLocalVariable('br_change_in_disatisfaction_var').GetValue|+-]"
+ #br_basic_estate_disatisfaction_increases_loc: "[GetPlayer.GetCustom('br_estate_with_increasing_disatisfaction_loc')] disatisfaction increased with a"
+ #br_increase_in_estate_disatisfaction_tt: "[SCOPE.GetLocalVariable('br_quantitative_indicator_var').GetName] $br_basic_estate_disatisfaction_increases_loc$ [GetPlayer.GetCustom('br_quantitative_indicator_loc')] amount"
+ br_basic_estate_disatisfaction_increases_loc: "disatisfaction increased with a"
+ br_hre_small_increase_in_1de_estate_disatisfaction_tt: "$br_1de_estate_loc$ $br_basic_estate_disatisfaction_increases_loc$ small amount: [GetPlayer.MakeScope.ScriptValue('br_small_increase_in_estate_disatisfaction_value')|+=]."
+ br_hre_medium_increase_in_1de_estate_disatisfaction_tt: "$br_1de_estate_loc$ $br_basic_estate_disatisfaction_increases_loc$ medium amount: [GetPlayer.MakeScope.ScriptValue('br_medium_increase_in_estate_disatisfaction_value')|+=]."
+ br_hre_large_increase_in_1de_estate_disatisfaction_tt: "$br_1de_estate_loc$ $br_basic_estate_disatisfaction_increases_loc$ large amount: [GetPlayer.MakeScope.ScriptValue('br_large_increase_in_estate_disatisfaction_value')|+=]."
+ br_hre_small_increase_in_2de_estate_disatisfaction_tt: "$br_2de_estate_loc$ $br_basic_estate_disatisfaction_increases_loc$ small amount: [GetPlayer.MakeScope.ScriptValue('br_small_increase_in_estate_disatisfaction_value')|+=]."
+ br_hre_medium_increase_in_2de_estate_disatisfaction_tt: "$br_2de_estate_loc$ $br_basic_estate_disatisfaction_increases_loc$ medium amount: [GetPlayer.MakeScope.ScriptValue('br_medium_increase_in_estate_disatisfaction_value')|+=]."
+ br_hre_large_increase_in_2de_estate_disatisfaction_tt: "$br_2de_estate_loc$ $br_basic_estate_disatisfaction_increases_loc$ large amount: [GetPlayer.MakeScope.ScriptValue('br_large_increase_in_estate_disatisfaction_value')|+=]."
+ br_hre_small_increase_in_3de_estate_disatisfaction_tt: "$br_3de_estate_loc$ $br_basic_estate_disatisfaction_increases_loc$ small amount: [GetPlayer.MakeScope.ScriptValue('br_small_increase_in_estate_disatisfaction_value')|+=]."
+ br_hre_medium_increase_in_3de_estate_disatisfaction_tt: "$br_3de_estate_loc$ $br_basic_estate_disatisfaction_increases_loc$ medium amount: [GetPlayer.MakeScope.ScriptValue('br_medium_increase_in_estate_disatisfaction_value')|+=]."
+ br_hre_large_increase_in_3de_estate_disatisfaction_tt: "$br_3de_estate_loc$ $br_basic_estate_disatisfaction_increases_loc$ large amount: [GetPlayer.MakeScope.ScriptValue('br_large_increase_in_estate_disatisfaction_value')|+=]."
+ br_hre_unspecified_increase_in_1de_estate_disatisfaction_tt: "$br_1de_estate_loc$ $br_basic_estate_disatisfaction_increases_loc$ unspecified amount: $br_disatisfaction_change_value$."
+ br_hre_unspecified_increase_in_2de_estate_disatisfaction_tt: "$br_2de_estate_loc$ $br_basic_estate_disatisfaction_increases_loc$ unspecified amount: $br_disatisfaction_change_value$."
+ br_hre_unspecified_increase_in_3de_estate_disatisfaction_tt: "$br_3de_estate_loc$ $br_basic_estate_disatisfaction_increases_loc$ unspecified amount: $br_disatisfaction_change_value$."
 
  ##Script value breakdowns
  grefm_value_from_voting: "From enacting #yellow Voting Rights#!"
