added scripted buttons to the JE

--- a/localization/english/br_hre_revolution_l_english.yml
+++ b/localization/english/br_hre_revolution_l_english.yml
@@ -142,6 +142,7 @@
  br_modifier_unpopular_regime: "Unpopular Regime"
  br_modifier_antiquated_regime: "Antiquated Regime"
  br_modifier_imperial_residence: "Imperial Residence"
+ br_modifier_special_chruch_rights: "Special Chruch Rights"
 
  # political movements
  br_movement_anti_feudalism: "Anti Feudalism Movement"
