updated the feudalism movements

--- a/localization/english/br_social_hierarchy_l_english.yml
+++ b/localization/english/br_social_hierarchy_l_english.yml
@@ -1,11 +1,11 @@
 ﻿l_english:
 
-#hierarchy: br_feudalism_social_hierarchy
+ #hierarchy: br_feudalism_social_hierarchy
  br_feudalism_social_hierarchy: "Feudalism Social Hierarchy"
  br_feudalism_social_hierarchy_desc: "A simplified codification by the Feudalism class hierarchy. One's position in the hierarchy, and thus one's rights and privileges, are inherited and fixed."
  br_feudalism_social_hierarchy_trigger_desc: "Belongs to a [concept_culture] that has the #b $european_heritage$#! [concept_cultural_trait]"
 
-#classes: br_feudalism_social_hierarchy
+ #classes: br_feudalism_social_hierarchy
  br_feudalism_nobles: "Nobles"
  br_feudalism_nobles_desc: "The highes class with the devine right to rule."
  br_feudalism_knights: "Knights"
@@ -19,7 +19,7 @@
  br_feudalism_serfs: "Serfs"
  br_feudalism_serfs_desc: "Serfs were obliged to work the land and give labor, homage, and a share of the produce to their lord in exchange for protection."
 
-#laws: br_feudalism_social_hierarchy
+ #laws: br_feudalism_social_hierarchy
  br_lawgroup_feudalism_hegemony: "Feudal Hegemony"
  br_lawgroup_feudalism_hegemony_desc: "Erasure of rights among members of society based on the Feudal System."
  br_law_feudalism_enforced: "Feudalism Enforced"
@@ -30,3 +30,14 @@
  br_law_feudalism_not_enforced_desc: "Socioeconomic mobility on the basis of class is not legally restricted but discrimination may still persist."
  br_law_feudalism_affirmative_action: "Affirmative Action"
  br_law_feudalism_affirmative_action_desc: "Active measures to create an equitable socioeconomic situation, prioritizing previously marginalized groups."
+
+ #br_feudalism_political_movement_pop_support
+ br_pop_is_of_1de_estate_loc: "The pop is of the 1de estate:"
+ br_pop_is_of_2de_estate_loc: "The pop is of the 2de estate:"
+ br_pop_is_of_3de_estate_loc: "The pop is of the 3de estate:"
+ br_is_a_noble_loc: "$br_feudalism_nobles$ [concept_social_class]"
+ br_is_a_knight_loc: "$br_feudalism_knights$ [concept_social_class]"
+ br_is_a_clergy_loc: "$br_feudalism_clergy$ [concept_social_class]"
+ br_is_a_burgher_loc: "$br_feudalism_burgher$ [concept_social_class]"
+ br_is_a_freemen_loc: "$br_feudalism_freemen$ [concept_social_class]"
+ br_is_a_serf_loc: "$br_feudalism_serfs$ [concept_social_class]"
