updated the pulse events and scripted buttons

--- a/localization/english/br_hre_revolution_l_english.yml
+++ b/localization/english/br_hre_revolution_l_english.yml
@@ -79,6 +79,19 @@
  br_comma_string_loc: "," #this loc is an standard comma string
 
 
+ ##Scripted Buttons
+ je_1de_estate_button: "$br_1de_estate_loc$ actions"
+ je_1de_estate_button_desc: "We must choose what actions we wish to take towards the $br_1de_estate_loc$."
+ je_2de_estate_button: "$br_2de_estate_loc$ actions"
+ je_2de_estate_button_desc: "We must choose what actions we wish to take towards the $br_2de_estate_loc$."
+ je_3de_estate_button: "$br_3de_estate_loc$ actions"
+ je_3de_estate_button_desc: "We must choose what actions we wish to take towards the $br_3de_estate_loc$."
+ je_clamp_down_on_church_rights_button: "Clamp down on chruch rights"
+ je_clamp_down_on_church_rights_button_desc: "The chruch is currently in a advantages position, because of special rights that are bestowed to them. It would benefit us if we were to revoke thes priviliges."
+ je_reinstate_chruch_rights_button: "Reinstate chruch rights"
+ je_reinstate_chruch_rights_button_desc: "We must reinstate the special priviliges of the church to curry favor with them."
+
+
  ##Events
  hre_revolution_events.5.t: "Food insecurity"
  hre_revolution_events.5.d: "There is currently a lot of Food insecurity amongst our population. This is increasing the unrest amongst the population."
