BR QOL adjustments
- Various QOL adjustments to BR decisions and the Exarchate events

--- a/localization/english/br_decisions_l_english.yml
+++ b/localization/english/br_decisions_l_english.yml
@@ -22,8 +22,8 @@
 
  romaioi_damsyria_decision: "Re-establish the Exarchate of Syria"
  romaioi_damsyria_decision_desc: "By re-establishing the Exarchate of Syria, we can restore a vital part of our imperial heritage. Replacing the Arab Damascus State with a loyal Exarchate will strengthen our control over the region and reassert Romaion influence in the Levant."
- romaioi_eastarm_decision: "Expand the Armenian Homeland"
- romaioi_eastarm_decision_desc: "The lands of Arevelyan have long been a part of the Armenian heartland. It is time to restore these territories to their rightful owners, ensuring the integrity and unity of the Armenian people under our banner."
+ romaioi_eastarm_decision: "Reclaim Eastern Armenia"
+ romaioi_eastarm_decision_desc: "The region of Arevelyan has long stood at the heart of Armenian heritage and identity. While the lands of Western Armenia may be yielded to secure peace or strategic advantage, the time has come to restore Eastern Armenia to its rightful place. By doing so, we reaffirm our commitment to the unity and future of the Armenian people under the Rōmaíōn standard."
  romaioi_eastmespotamia_decision: "Establish the Exarchate of Mesopotamia"
  romaioi_eastmespotamia_decision_desc: "The Pronia of Mesopotamia is strategically positioned to absorb the Assyrian state. By transforming this region into a full Exarchate, we can secure its stability, integrate its people, and extend our imperial reach in the East."
  romaioi_expand_taurica_decision: "Expand Taurica into the Black Sea Colonies"
