--- a/localization/english/br_events_l_english.yml
+++ b/localization/english/br_events_l_english.yml
@@ -191,37 +191,37 @@
  veiled_exarchate.1.d: "The august authority of [ROOT.GetCountry.GetName] has been reaffirmed in the Nile Valley. Though the Komnenoi once bore imperial titles, their governance became increasingly independent—cloaked in the veil of loyalty but distant from the true oikoumene of the Empire."
  veiled_exarchate.1.f: "In Alexandreia, incense still clings to the air as imperial banners are raised anew. The Komnenoi’s claims lie in ruin, and [SCOPE.sCountry('egypt_overlord_country').GetAdjectiveNoFormatting] logothetai now convene to determine who shall bear the imperial mandate in Aigyptos henceforth."
  veiled_exarchate.1.a: "Confirm the Komnenoi under solemn oath and tighter oversight."
- veiled_exarchate.1.b: "Strip them of office and appoint a new Exarchos, loyal to the crown."
+ veiled_exarchate.1.b: "Affirm our Rōmaíōn legacy—embrace Orthodoxy, elevate the Romaioi as our guiding people, and establish the Exarchate as a true pillar of imperial unity."
 
  veiled_exarchate.2.t: "The Exarchate of Afrikē Renewed"
  veiled_exarchate.2.d: "Once an ancient bastion of Romaíon authority, [SCOPE.sCountry('africa_country').GetName] has been brought back under the [ROOT.GetCountry.GetName] aegis. The fiction of subservience is dispelled; the veil torn from a long-dormant office."
  veiled_exarchate.2.f: "In Karthago, where columns stand beside crumbling churches, the imperial sigillium has been restored. [SCOPE.sCountry('africa_overlord_country').GetAdjectiveNoFormatting] notaries debate the future of Afrikē: shall the ruling archontes remain, or shall a new Exarchos be appointed to guide the faithful?"
  veiled_exarchate.2.a: "Renew the local dynatoi’s dignity under imperial guardianship."
- veiled_exarchate.2.b: "Remove the old regime and invest a new loyal Exarchos."
+ veiled_exarchate.2.b: "Affirm our Rōmaíōn legacy—embrace Orthodoxy, elevate the Romaioi as our guiding people, and establish the Exarchate as a true pillar of imperial unity."
 
  veiled_exarchate.3.t: "The Katepaníkion of Italia Rekindled"
  veiled_exarchate.3.d: "In the shadow of ancient Rome, [ROOT.GetCountry.GetName] has reestablished full imperial authority over [SCOPE.sCountry('italy_country').GetName]. Though still bearing imperial titles, the region had long acted in practice as an independent principality."
  veiled_exarchate.3.f: "In the forum of Neapolis, the clergy and magistrates await the will of the Basileus. [SCOPE.sCountry('italy_overlord_country').GetAdjectiveNoFormatting] envoys propose that a new Katepano be appointed to embody the Emperor’s divine mandate."
  veiled_exarchate.3.a: "Confirm the existing Katepano under renewed chrysobullion."
- veiled_exarchate.3.b: "Depose the incumbent and name a new, faithful Katepano."
+ veiled_exarchate.3.b: "Affirm our Rōmaíōn legacy—embrace Orthodoxy, elevate the Romaioi as our guiding people, and establish the Exarchate as a true pillar of imperial unity."
 
  veiled_exarchate.4.t: "The Exarchate of Syria"
  veiled_exarchate.4.d: "Syria, the ancient eastern frontier of the Imperium, has once again been enfolded within the Basileus' sacred jurisdiction. Though previously ruled by nominal servants of the crown, their obedience was symbolic at best."
  veiled_exarchate.4.f: "Under the mosaics of Antioch, synods gather and military banners unfurl. [SCOPE.sCountry('syria_overlord_country').GetAdjectiveNoFormatting] officials now deliberate whether to grant continued stewardship to the local archontes—or to raise up a new guardian of the [ROOT.GetCountry.GetName] frontier."
  veiled_exarchate.4.a: "Reconfirm the ruling Exarch under solemn oaths."
- veiled_exarchate.4.b: "Remove him and appoint one loyal to the Purple."
+ veiled_exarchate.4.b: "Affirm our Rōmaíōn legacy—embrace Orthodoxy, elevate the Romaioi as our guiding people, and establish the Exarchate as a true pillar of imperial unity."
 
  veiled_exarchate.5.t: "Elysium Rejoins the Oikoumene"
  veiled_exarchate.5.d: "From across the western sea, the colony of [SCOPE.sCountry('elysium_country').GetName] has once again affirmed its loyalty to [ROOT.GetCountry.GetName]. Though long estranged, its people are children of the Empire still, and now return to their rightful place within the oikoumene of the Basileus."
  veiled_exarchate.5.f: "Within the marble basilicas and shaded agoras of Elysium, imperial heralds proclaim the restoration of suzerainty. The synedrion is divided: shall the existing archontes remain under renewed chrysobullion, or shall a new Eparchos be raised to guide this province in truth and fidelity?"
  veiled_exarchate.5.a: "Confirm the local rulers under the restored imperial mandate."
- veiled_exarchate.5.b: "Depose them and install a faithful servant of the Purple."
+ veiled_exarchate.5.b: "Affirm our Rōmaíōn legacy—embrace Orthodoxy, elevate the Romaioi as our guiding people, and establish the Exarchate as a true pillar of imperial unity."
 
  veiled_exarchate.6.t: "Antipódeia Returns to the Fold"
  veiled_exarchate.6.d: "In the distant reaches of the world, [SCOPE.sCountry('australis_country').GetName] has reaffirmed its allegiance to the [ROOT.GetCountry.GetName]. Founded by exiles and settlers of the Romaíon sphere, it now stands once more beneath the wings of the double-headed eagle."
  veiled_exarchate.6.f: "In the porticos of Hyperionia, orators speak of a second golden age. The imperial seal has been pressed, and [SCOPE.sCountry('elysium_overlord_country').GetAdjectiveNoFormatting] dignitaries now ponder whether to retain the old magistrates—or install new stewards loyal to the Chrysotriklinos."
  veiled_exarchate.6.a: "Confirm the magistrates under imperial suzerainty."
- veiled_exarchate.6.b: "Remove them and invest a new Eparchos, sworn to the throne."
+ veiled_exarchate.6.b: "Affirm our Rōmaíōn legacy—embrace Orthodoxy, elevate the Romaioi as our guiding people, and establish the Exarchate as a true pillar of imperial unity."
 
 
  ###REVOLT EVENTS###
