renamed modifiers and added modifier loc

--- a/localization/english/br_hre_revolution_l_english.yml
+++ b/localization/english/br_hre_revolution_l_english.yml
@@ -177,6 +177,9 @@
  br_modifier_antiquated_regime: "Antiquated Regime"
  br_modifier_imperial_residence: "Imperial Residence"
  br_modifier_special_chruch_rights: "Special Chruch Rights"
+ br_modifier_bourgeois_ministers: "Bourgeois Ministers"
+ br_modifier_subsidize_food_distribution: "Subsidize food distribution"
+ br_modifier_new_noble_titles: "New Noble titles"
 
  # political movements
  br_movement_anti_feudalism: "Anti Feudalism Movement"
