--- a/localization/english/br_hre_revolution_l_english.yml
+++ b/localization/english/br_hre_revolution_l_english.yml
@@ -83,15 +83,19 @@
 
  ##Scripted Buttons
  br_show_estate_actions_loc: "Show actions you can take towards the"
+ br_hide_estate_actions_loc: "Hide actions you can take towards the"
  je_1de_estate_button: "$br_1de_estate_loc$ actions"
  je_1de_estate_button_desc: "We must choose what actions we wish to take towards the $br_1de_estate_loc$."
  br_show_1de_estate_actions_loc: "$br_show_estate_actions_loc$ $br_1de_estate_loc$."
+ br_hide_1de_estate_actions_loc: "$br_hide_estate_actions_loc$ $br_1de_estate_loc$."
  je_2de_estate_button: "$br_2de_estate_loc$ actions"
  je_2de_estate_button_desc: "We must choose what actions we wish to take towards the $br_2de_estate_loc$."
  br_show_2de_estate_actions_loc: "$br_show_estate_actions_loc$ $br_2de_estate_loc$."
+ br_hide_2de_estate_actions_loc: "$br_hide_estate_actions_loc$ $br_2de_estate_loc$."
  je_3de_estate_button: "$br_3de_estate_loc$ actions"
  je_3de_estate_button_desc: "We must choose what actions we wish to take towards the $br_3de_estate_loc$."
  br_show_3de_estate_actions_loc: "$br_show_estate_actions_loc$ $br_3de_estate_loc$."
+ br_hide_3de_estate_actions_loc: "$br_hide_estate_actions_loc$ $br_3de_estate_loc$."
  #1ste estate buttons
  je_create_new_titles_to_appease_nobles_button: "Create new titles to appease Nobles"
  je_create_new_titles_to_appease_nobles_button_desc: "Create new titles so the Nobility is appeased."
