--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -226,6 +226,8 @@
  company_br_byz_textiles: "Chrysóntima Ergastḗrion"
  company_br_ven_textiles: "Tessitura di Rialto"
  company_hansa_trade: "Hanseatic League"
+ company_br_byz_arsenal: "Kentrikòn Polemikòn Skeuastērion"
+ company_br_byz_mining_steel: "Metalleutikà Ergastēria tōn Anatolēs"
 
  #Prestige goods
  prestige_good_br_byz_silk: "Chrysósērion"
