Emporikē Hetaireía Rhōssía
- Added the Emporikē Hetaireía Rhōssía Based in Crimea owns logging and trade centers in Russia and Tartaria.

--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -228,6 +228,7 @@
  company_hansa_trade: "Hanseatic League"
  company_br_byz_arsenal: "Kentrikòn Polemikòn Skeuastērion"
  company_br_byz_mining_steel: "Metalleutikà Ergastēria tōn Anatolēs"
+ company_br_byz_rus: "Emporikē Hetaireía Rhōssía"
 
  #Prestige goods
  prestige_good_br_byz_silk: "Chrysósērion"
