--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -266,6 +266,7 @@
  state_trait_yemeni_coffee: "Yemeni Coffee"
  state_trait_thessalian_plain: "Thessalian Plain"
  state_trait_major_river_systems: "Important River"
+ state_trait_ethiopian_highlands: "Ethiopian Highlands"
 
  automatic_irrigation_building_spices_plantation: "Automatic Irrigation"
  default_building_spices_plantation: "Basic Production"
