Added new companies
- added 6 new Companies for Elysium.
- adjusted some prestige goods for others.

--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -229,6 +229,12 @@
  company_br_byz_arsenal: "Kentrikòn Polemikòn Skeuastērion"
  company_br_byz_mining_steel: "Metalleutikà Ergastēria tōn Anatolēs"
  company_br_byz_rus: "Rhōsikē Hetaireía tou Emporíou tou Boreíou"
+ company_br_elysian_mercantile_guild: "Emporikḗ Syntechnía Elysiōn"
+ company_br_elysian_indigo_guild: "Koinōnía tēs Sērikēs kai tēs Baphēs"
+ company_br_elysian_great_estates: "Latifundia Magna Elysiōn"
+ company_br_kykladian_naval: "Naftikḗ Archē tōn Kykladiōn"
+ company_br_elysian_colonization_company: "Oikistikḗ Hetaireía Elysiōn"
+ company_br_elysian_ironworking_company: "Siderourgikḗ Koinōnía Elysiōn"
 
  #Prestige goods
  prestige_good_br_byz_silk: "Chrysósērion"
