Added Vinland Companies and Prestige Goods
- Added Vinland Companies and Prestige Goods
- re-themed old ones

--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -214,18 +214,18 @@
 
  #Companies
  company_byz_ric: "Emporikē Hetaireia tēs Indikēs"
- company_ven_trade: "Venice Trade League"
- company_ven_arsenal: "Venice Arsenal"
- company_gen_trade: "Genoa Trade League"
- company_gen_arsenal: "Genoa Arsenal"
- company_fla_trade: "Ostend Company"
+ company_ven_trade: "Lega Mercantile di Venezia"
+ company_ven_arsenal: "Arsenale della Serenissima"
+ company_gen_trade: "Lega Mercantile di Genova"
+ company_gen_arsenal: "Arsenale dei Dogi Liguri"
+ company_fla_trade: "Handelscompagnie van Ostende"
  company_net_trade: "Vereenigde Oostindische Compagnie"
- company_jap_trade: "Nihon bōekigaisha"
- company_oma_trade: "sharikat euman liltijara"
- company_florence_bank: "Medici Bank"
+ company_jap_trade: "Nihon Bōekigaisha"
+ company_oma_trade: "Sharikat Euman Liltijara"
+ company_florence_bank: "Banco dei Medici"
  company_br_byz_textiles: "Chrysóntima Ergastḗrion"
  company_br_ven_textiles: "Tessitura di Rialto"
- company_hansa_trade: "Hanseatic League"
+ company_hansa_trade: "Hanseatische Liga"
  company_br_byz_arsenal: "Kentrikòn Polemikòn Skeuastērion"
  company_br_byz_mining_steel: "Metalleutikà Ergastēria tōn Anatolēs"
  company_br_byz_rus: "Rhōsikē Hetaireía tou Emporíou tou Boreíou"
@@ -235,12 +235,17 @@
  company_br_kykladian_naval: "Naftikḗ Archē tōn Kykladiōn"
  company_br_elysian_colonization_company: "Oikistikḗ Hetaireía Elysiōn"
  company_br_elysian_ironworking_company: "Siderourgikḗ Koinōnía Elysiōn"
+ company_br_vinland_colonization_company: "Landnámsfélagið Mikla"
+ company_br_vinland_timber_company: "Viðrfélag Vinlands"
+ company_br_vinland_fishing_company: "Haffangfélagið"
 
  #Prestige goods
  prestige_good_br_byz_silk: "Chrysósērion"
  prestige_good_br_ely_silk: "Auriloma Silk"
  prestige_good_br_byz_clothes: "Chrysórrapha"
  prestige_good_br_ven_clothes: "Seta Serenissima"
+ prestige_good_br_new_world_pine: "New World Pine"
+ prestige_good_br_new_world_fur: "New World Fur"
 
  #State Regions
 
