add new Swedish company
- Added another Swedish resource company this one is iron and wood with steel and paper as expansion buildings

--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -238,6 +238,7 @@
  company_br_vinland_colonization_company: "Landnámsfélagið Mikla"
  company_br_vinland_timber_company: "Viðrfélag Vinlands"
  company_br_vinland_fishing_company: "Haffangfélagið"
+ company_br_early_swedish_resource_company: "Norrlandska Gruv- och Skogsbolaget"
 
  #Prestige goods
  prestige_good_br_byz_silk: "Chrysósērion"
