--- a/localization/english/br_journals_l_english.yml
+++ b/localization/english/br_journals_l_english.yml
@@ -252,11 +252,11 @@
 
  je_aegypt_homeland: "By Right of Descent, By Deed of Civilization"
  je_aegypt_homeland_reason: "The land of Aegypt has always stood at the crossroads of empire, faith, and civilization. For over five centuries, our people have tilled the fields of the Nile, studied in the schools of Alexandria and Kario, and prayed beneath the domes of temples and churches alike. We are not foreigners in this land — we are its living memory.Yet our cultural legacy remains unrecognized. If we are to restore the dignity of the Aegyptian people — the southern sons of Rōmaíōn civilization — then the land must be declared our homeland. Not through bloodshed, but by the strength of our numbers, our labor, and our enduring spirit."
- je_aegypt_homeland_goal: "Aegypt homeland goal"
+ #je_aegypt_homeland_goal: "Aegypt homeland goal"
 
  je_afrika_homeland: "From Province to Patrída"
  je_afrika_homeland_reason: "The Afrikan people are not strangers to these lands — we are their heirs. From the days of the Exarchate to the long centuries of flux and foreign dominion, this coast and interior have never forgotten the shape of Rōmaíōn civilization. We are descended not only from the soldiers and settlers who crossed the sea, but from the Berber tribes who took up our ways, the Latin provincials who kept the old rites alive, and the Arab communities who came to speak and pray as we do.In our cities and fields live the living legacy of empire — not as a memory, but as a people. It is time for that people to be recognized. This land is our patrída — not by conquest, but by continuity."
- je_afrika_homeland_goal: "Afrika homeland goal"
+ #je_afrika_homeland_goal: "Afrika homeland goal"
  
 
 
