--- a/localization/english/br_names_l_english.yml
+++ b/localization/english/br_names_l_english.yml
@@ -855,7 +855,7 @@
  Maghradze: "Maghradze"
  #Makharadze: "Makharadze"
  Makhateli: "Makhateli"
- #Makhviladze: "Makhviladze"
+ Makhviladze: "Makhviladze"
  Mamardashvili: "Mamardashvili"
  Mamatsashvili: "Mamatsashvili"
  Mamuchashvili: "Mamuchashvili"
@@ -874,7 +874,7 @@
  Meunargia: "Meunargia"
  Mgaloblishvili: "Mgaloblishvili"
  Mgeladze: "Mgeladze"
- #Mikelashvili: "Mikelashvili"
+ Mikelashvili: "Mikelashvili"
  Mirzashvili: "Mirzashvili"
  Momtsemlidze: "Momtsemlidze"
  Mortuladze: "Mortuladze"
