--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -238,7 +238,7 @@
  company_br_vinland_colonization_company: "Landnámsfélagið Mikla"
  company_br_vinland_timber_company: "Viðrfélag Vinlands"
  company_br_vinland_fishing_company: "Haffangfélagið"
- company_br_early_swedish_resource_company: "Norrlandska Gruv- och Skogsbolaget"
+ company_br_early_swedish_resource_company: "Stora Kopparberg" #Stora Kopparberg Bergslags Aktiebolag
 
  #Prestige goods
  prestige_good_br_byz_silk: "Chrysósērion"
@@ -247,6 +247,8 @@
  prestige_good_br_ven_clothes: "Seta Serenissima"
  prestige_good_br_new_world_pine: "New World Pine"
  prestige_good_br_new_world_fur: "New World Fur"
+ prestige_good_br_prestige_copper: "Kopparklimp"
+ prestige_good_br_prestige_beer: "Königsbier" 
 
  #State Regions
 
